--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,58 @@
     transform: rotate(360deg);
   }
 }
+
+
+.firstQuestion{
+  display: flex;
+            justify-content: center; /* Center horizontally */
+            align-items: center;     /* Center vertically */    
+}
+
+.container {
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center;     /* Center vertically */
+  text-align: center;      /* Center text inside container */
+}
+
+.text-center {
+  text-align: center;
+}
+
+.form {
+  margin-top: 20px;
+}
+
+.input {
+  padding: 8px;
+  font-size: 16px;
+}
+
+.button {
+  padding: 8px 16px;
+  font-size: 16px;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+
+
+.animation-wait {
+  animation: waitAnimation 3s;
+}
+
+
+@keyframes waitAnimation {
+  0% {
+      opacity: 0;
+  }
+
+  90% {
+    opacity: 0;
+  }
+
+  100% {
+      opacity: 1;
+  }
+}
